# group2_ariac

./: LICENSE  README.md
group2_ariac/: CMakeLists.txt  package.xml  setup.py
group2_ariac/config/: group2_sensor.yaml  sensors.yaml
group2_ariac/etc/: README.md  class_diagram.wsd
group2_ariac/group2_ariac/: order_processing_node.cpp  python_logger_node.py  robot_controller_node.py
group2_ariac/include/group2_ariac/: bin_parts_detector.hpp  complete_orders.hpp  conveyor_tracker_node.hpp  end_competition_node.hpp  retrieve_orders.hpp  ship_orders.hpp  start_competition_node.hpp  tray_detector.hpp
group2_ariac/launch/: group2_ariac.launch.py
group2_ariac/src/: bin_parts_detector.cpp  complete_orders.cpp  conveyor_tracker_node.cpp  end_competition_node.cpp  retrieve_orders.cpp  ship_orders.cpp  start_competition_node.cpp  test_server.cpp  tray_detector.cpp
group2_msgs/: CMakeLists.txt  package.xml
group2_msgs/msg/: Order.msg  OrderList.msg  Part.msg  PartList.msg
group2_msgs/srv/: Pose.srv
