<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group2_ariac</name>
  <version>0.0.0</version>
  <description>
    Group2 ARIAC package:
    Starts the competition, Processes orders,
    Ships orders, Submits orders and ends the competition.
  </description>
  <maintainer email="abhey2526@gmail.com">abhey</maintainer>
  <maintainer email="w_apple19910215@icloud.com">wei-li</maintainer>  
  <maintainer email="reyroque@umd.edu">rey</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ament_index_cpp</depend>
  <depend>ariac_msgs</depend>
  <depend>sensor_msgs</depend>  
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>opencv4</depend>
  <depend>geometry_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl_vendor</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>group2_msgs</depend>  
<!-- 
  <build_depend>cv_bridge</build_depend>
  <exec_depend>cv_bridge</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
